v0.5.0/_sources/gallery/maps/borders.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/maps/borders.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_maps_borders.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_maps_borders.py:


Political Boundaries
--------------------

The ``borders`` parameter of :meth:`pygmt.Figure.coast` specifies levels of
political boundaries to plot and the pen used to draw them. Choose from the
list of boundaries below:

* **1** = National boundaries
* **2** = State boundaries within the Americas
* **3** = Marine boundaries
* **a** = All boundaries (1-3)

For example, to draw national boundaries with a line thickness of 1p and black
line color use ``borders="1/1p,black"``. You can draw multiple boundaries by
passing in a list to ``borders``.

.. GENERATED FROM PYTHON SOURCE LINES 18-27



.. image-sg:: /gallery/maps/images/sphx_glr_borders_001.png
   :alt: borders
   :srcset: /gallery/maps/images/sphx_glr_borders_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Make a Sinusoidal projection map of the Americas with automatic annotations,
    # ticks and gridlines
    fig.basemap(region=[-150, -30, -60, 60], projection="I-90/15c", frame="afg")
    # Plot each level of the boundaries dataset with a different color.
    fig.coast(borders=["1/0.5p,black", "2/0.5p,red", "3/0.5p,blue"], land="gray")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.459 seconds)


.. _sphx_glr_download_gallery_maps_borders.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: borders.py <borders.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: borders.ipynb <borders.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
